--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Cursos</a></li>
-            <li><a href="#">Inscrições</a></li>
+            <li><a href="pages/formulario.html">Inscrições</a></li>
             <li><a href="#">Sobre</a></li>
         </ul>
     </nav>
