--- a/pages/Inscricao.html
+++ b/pages/Inscricao.html
@@ -129,48 +129,34 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="#">Cursos</a></li>
-            <li><a href="pages/Inscricao.html">Inscrições</a></li>
+            <li><a href="../pages/Inscricao.html">Inscrições</a></li>
             <li><a href="#">Sobre</a></li>
         </ul>
     </nav>
     <div id="conteudo">
     <main>
-        <h4>Desenvolvimento Web </h4>
-        <section>
-            <h3>Crie aplicações web com PHP e MySQL</h3>
-            <img width="325" src="images/PHP-MySQL.png" alt="PHP-MySql">
-            <span>Sobre o Curso</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam aut unde corrupti, officia, delectus
-                aliquam eligendi explicabo temporibus accusamus provident blanditiis, debitis maxime! Fugit velit sunt
-                dolorum, libero possimus quae.</p>
-        </section>
-        <section>
-            <h3>Construindo seu primeiro app com react native</h3>
-            <img width="325" src="images/React-Native.png" alt="React-Native">
-            <span>Sobre o Curso</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus provident voluptates quasi ratione illo, enim doloribus delectus iure fugiat suscipit perferendis, magni magnam cumque, odit error nam. Sit, tenetur necessitatibus.</p>
-        </section>
+        <h4>Cadastro de novo usuario</h4>
     </main>
     <aside>
         <h4>Posts em Destaque</h4>
         <section>
-            <img style="width: 100%;" src="images/PHP-MySQL.png" alt="PHP-MySql">
+            <img style="width: 100%;" src="../images/PHP-MySQL.png" alt="PHP-MySql">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam aut unde corrupti, officia, delectus
                 aliquam eligendi explicabo temporibus accusamus provident blanditiis, debitis maxime! Fugit velit sunt
                 dolorum, libero possimus quae.</p>
             <span>Leia Mais</span>
         </section>
         <section>
-            <img style="width: 100%;" src="images/React-Native.png" alt="React-Native">
+            <img style="width: 100%;" src="../images/React-Native.png" alt="React-Native">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus provident voluptates quasi ratione illo, enim doloribus delectus iure fugiat suscipit perferendis, magni magnam cumque, odit error nam. Sit, tenetur necessitatibus.</p>
         <span>Leia Mais</span>
         </section>
         <h4>Ultimas Notícias</h4>
         <section>
             <h3>Alunos da EEEPGAL são destaques na OBI</h3>
-            <img style="width: 100%;" src="images/alunos-ep.jpg" alt="ALunos-EP">
+            <img style="width: 100%;" src="../images/alunos-ep.jpg" alt="ALunos-EP">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam aut unde corrupti, officia, delectus
                 aliquam eligendi explicabo temporibus accusamus provident blanditiis, debitis maxime! Fugit velit sunt
                 dolorum, libero possimus quae.</p>
